# 2D-NS-Solver

./: Agent.md  CLAUDE.md  CMakeLists.txt  README.md
include/: FluidField.hpp  FluidFieldCuda.cuh
src/: FluidField.cpp  FluidFieldCuda.cu  main.cpp  main_cuda.cpp
tests/: FluidFieldCudaTests.cpp  FluidFieldTests.cpp
